Fixes word break in header

--- a/asset/sass/blocks/_header.scss
+++ b/asset/sass/blocks/_header.scss
@@ -12,7 +12,7 @@
         font-weight: 300;
         margin: 0;
         color: white;
-
+        word-break: normal;
     }
 
     &__subtitle {
